--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
+    "axios": "^1.2.0",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "typescript": "^4.4.3"
