--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node .",
     "build": "(rm -rf dist/commands || true) && tsc",
     "dev:watch": "nodemon -e ts --exec '(rm -rf dist/commands || true) && tsc && node . || exit 1'",
-    "dev": "(rm -rf dist/commands || true) && tsc && node .",
+    "dev": "tsc && node .",
     "regist": "(rm -rf dist/commands || true) && tsc && node dist/init.js"
   },
   "devDependencies": {
@@ -24,7 +24,9 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
+    "@types/coingecko-api": "^1.0.10",
     "axios": "^1.2.0",
+    "coingecko-api": "^1.0.10",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "typescript": "^4.4.3"
